[project]
name = "sc6104"
version = "0.1.0"
description = ""
authors = [
    {name = "Sibei Chen",email = "git@chencraft.com"}
]
license = {text = "GPL-v3"}
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.0.0",
    "cryptography>=42.0.0",
    "requests>=2.31.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false